@@ -45,6 +45,11 @@
     </parser>
   </parsers>
   <metadataFilters>
+    <!-- depending on the file format, some dates do not have a timezone. This
+         filter arbitrarily assumes dates have a UTC timezone and will format all
+         dates as yyyy-MM-dd'T'HH:mm:ss'Z' whether or not they actually have a timezone.
+         -->
+    <metadataFilter class="org.apache.tika.metadata.filter.DateNormalizingMetadataFilter"/>
     <metadataFilter class="org.apache.tika.metadata.filter.FieldNameMappingFilter">
       <params>
         <excludeUnmapped>true</excludeUnmapped>
